# rust-csv

./: Cargo.toml
ci/: check-copy  script.sh
csv-core/src/: lib.rs  writer.rs
examples/: cookbook-read-serde.rs  cookbook-write-serde.rs  tutorial-perf-serde-01.rs  tutorial-perf-serde-02.rs  tutorial-perf-serde-03.rs  tutorial-pipeline-pop-01.rs  tutorial-read-serde-02.rs  tutorial-read-serde-03.rs  tutorial-read-serde-04.rs  tutorial-read-serde-invalid-01.rs  tutorial-read-serde-invalid-02.rs  tutorial-write-serde-01.rs  tutorial-write-serde-02.rs
scripts/: copy-examples.py
src/: byte_record.rs  cookbook.rs  deserializer.rs  error.rs  lib.rs  reader.rs  serializer.rs  string_record.rs  tutorial.rs  writer.rs
